[gd_scene load_steps=3 format=2]

[ext_resource path="res://Entity.gd" type="Script" id=1]
[ext_resource path="res://trangle.png" type="Texture" id=2]

[node name="Entity" type="Node2D" groups=["Agents"]]
script = ExtResource( 1 )
body_type = Color( 1, 1, 1, 1 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
position = Vector2( -2, 0 )
polygon = PoolVector2Array( -1, 4, -1, -4, 8, 0 )

[node name="Sprite" type="Sprite" parent="RigidBody2D"]
position = Vector2( 2, 0 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="RigidBody2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D/Area2D"]
position = Vector2( -3, 0 )
polygon = PoolVector2Array( 11, 0, 0, 5, 0, -5 )

[node name="DriftClock" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Development" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="area_entered" from="RigidBody2D/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="DriftClock" to="." method="_on_DriftClock_timeout"]
[connection signal="timeout" from="Development" to="." method="_on_Development_timeout"]
